@@ -81,16 +81,6 @@ root/static/scripts/manual_qc_ui.js
 root/static/scripts/modify_on_view.js
 root/static/scripts/plots.js
 root/static/stylesheets/npg_seqqc.css
-root/static/test/test.html
-root/static/test/test.js
-root/static/test/test_format_for_csv.html
-root/static/test/test_format_for_csv.js
-root/static/test/test_modify_on_view.html
-root/static/test/test_modify_on_view.js
-root/static/test/images/cross.png
-root/static/test/images/tick.png
-root/static/test/images/padlock.png
-root/static/test/images/circle.png
 script/npg_qc_viewer_cgi.pl
 script/npg_qc_viewer_create.pl
 script/npg_qc_viewer_fastcgi.pl
@@ -127,6 +117,16 @@ t/80-app-run-stash.t
 t/80-app-run.t
 t/80-app-sample.t
 t/80-app.t
+t/client/test.html
+t/client/test.js
+t/client/test_format_for_csv.html
+t/client/test_format_for_csv.js
+t/client/test_modify_on_view.html
+t/client/test_modify_on_view.js
+t/client/images/cross.png
+t/client/images/tick.png
+t/client/images/padlock.png
+t/client/images/circle.png
 t/data/fixtures/npg/000-EntityType.yml
 t/data/fixtures/npg/000-InstrumentStatusDict.yml
 t/data/fixtures/npg/000-RunLaneStatusDict.yml
