@@ -86,16 +86,14 @@ Install node package dependencies if they are not available.
 
 Running the tests
 
-  $ pushd root/static 
-  $ node-qunit-phantomjs test/test.html --verbose
-  $ node-qunit-phantomjs test/test_format_for_csv.html --verbose
-  $ node-qunit-phantomjs test/test_modify_on_view.html --verbose
-  $ popd
+  $ node-qunit-phantomjs t/client/test.html --verbose
+  $ node-qunit-phantomjs t/client/test_format_for_csv.html --verbose
+  $ node-qunit-phantomjs t/client/test_modify_on_view.html --verbose
 
 Testing in browser:
 
   Open files in a browser window :
-    npg_qc_viewer/root/static/test/test.html
-    npg_qc_viewer/root/static/test/test_format_for_csv.html
-    npg_qc_viewer/root/static/test/test_modify_on_view.html
+    t/client/test.html
+    t/client/test_format_for_csv.html
+    t/client/test_modify_on_view.html
 
