@@ -2,13 +2,13 @@
 <html>
 <head>
 <title>QUnit Test Suite</title>
-<link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css" type="text/css" media="screen">
-<script type="text/javascript" src="../bower_components/qunit/qunit/qunit.js"></script>
-<script type="text/javascript" src="../bower_components/jquery/dist/jquery.js"></script>
-<script type="text/javascript" src="../bower_components/blanket/dist/qunit/blanket.js"></script>
+<link rel="stylesheet" href="../../root/static/bower_components/qunit/qunit/qunit.css" type="text/css" media="screen">
+<script type="text/javascript" src="../../root/static/bower_components/qunit/qunit/qunit.js"></script>
+<script type="text/javascript" src="../../root/static/bower_components/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="../../root/static/bower_components/blanket/dist/qunit/blanket.js"></script>
 <!-- Your project file goes here -->
-<script type="text/javascript" src="../scripts/manual_qc.js" data-cover></script>
-<script type="text/javascript" src="../scripts/manual_qc_ui.js" data-cover></script>
+<script type="text/javascript" src="../../root/static/scripts/manual_qc.js" data-cover></script>
+<script type="text/javascript" src="../../root/static/scripts/manual_qc_ui.js" data-cover></script>
 <!-- Your tests file goes here -->
 <script type="text/javascript" src="test.js"></script>
 <script>
