@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Table format for export tests</title>
-    <link rel="stylesheet" type="text/css" href="../bower_components/qunit/qunit/qunit.css">
-    <script src="../bower_components/qunit/qunit/qunit.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../root/static/bower_components/qunit/qunit/qunit.css">
+    <script src="../../root/static/bower_components/qunit/qunit/qunit.js"></script>
     <script>QUnit.config.autostart = false;</script>
   </head>
   <body>
@@ -32,7 +32,7 @@
         </tbody>
     </table>
     </div>
-    <script data-main="test_format_for_csv" src="../bower_components/requirejs/require.js"></script>
+    <script data-main="test_format_for_csv" src="../../root/static/bower_components/requirejs/require.js"></script>
   </body>
 </html>
 
