@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Modify on view</title>
-    <link rel="stylesheet" type="text/css" href="../bower_components/qunit/qunit/qunit.css">
-    <script src="../bower_components/qunit/qunit/qunit.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../root/static/bower_components/qunit/qunit/qunit.css">
+    <script src="../../root/static/bower_components/qunit/qunit/qunit.js"></script>
     <script>QUnit.config.autostart = false;</script>
   </head>
   <body>
@@ -52,7 +52,7 @@
     <div id='padding_at_end'></div>
 
     <!-- Padding for test data, to use to generate big ammounts of content -->
-    <dib id='big_padding_data' hidden>
+    <div id='big_padding_data' hidden>
       <div class="results_full_lane">
       <h3>run 18096 lane 2 | DN5D:2:S2</h3>
       <h4>Reference: Homo_sapiens</h4>
@@ -837,8 +837,8 @@
        </div>
       </div>
      </div>
-    </dib>
+    </div>
     <!-- End padding for test data, to use to generate big ammounts of content -->
-    <script data-main="test_modify_on_view" src="../bower_components/requirejs/require.js"></script>
+    <script data-main="test_modify_on_view" src="../../root/static/bower_components/requirejs/require.js"></script>
   </body>
 </html>
