@@ -2,6 +2,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
 
  - SeqQC
    - bower configuration files in npg_qc/npg_qc_viewer
+   - moving client test files to npg_qc/npg_qc_viewer/t/client
 
 release 59.6
  - SeqQC
